tests/lean/1467.lean.expected.out
1467.lean:8:0: error: subst tactic failed, hypothesis 'H' is not of the form (x = t) or (t = x)
state:
m : ℕ,
n : ℕ := g m,
H : f n = m
⊢ h m = h m
1467.lean:18:0: error: subst tactic failed, hypothesis 'H' is not of the form (x = t) or (t = x)
state:
m : ℕ,
n : ℕ := ?m_1,
H : f n = m
⊢ h m = h m
1467.lean:25:0: error: subst tactic failed, hypothesis 'm' is not a variable nor an equation of the form (x = t) or (t = x)
state:
m : ℕ,
n : ℕ := g m,
H : f n = m
⊢ h m = h m
1467.lean:35:0: error: subst tactic failed, hypothesis 'm' is not a variable nor an equation of the form (x = t) or (t = x)
state:
m : ℕ,
n : ℕ := ?m_1,
H : f n = m
⊢ h m = h m
1467.lean:42:0: error: clear tactic failed, hypothesis 'a' depends on 'p'
state:
m p : ℕ,
a : ℕ := g p,
n : ℕ := g a
⊢ h m = h m
